Fix header alignment and sizing

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,8 @@ ul {
 
 .head-info {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 .right-links{
     color: #E5E7EB;
@@ -88,8 +87,9 @@ ul {
     background-color: #3C84F4;
     color: white;
     font-weight: bold;
-    height: 40px;
-    width: 150px;
+    font-size: 12px;
+    height: 25px;
+    width: 90px;
     padding: 8px;
     border-radius: 8px;
 }
@@ -100,11 +100,17 @@ ul {
     align-items: center;
 }
 
+.head-text {
+    margin-bottom: 0px;
+    
+}
+
 .info-container {
     display: flex;
     flex-direction: column;
     width: 350px;
-    gap: -20px;
+    gap: 0px;
+    justify-content: center;
     padding: 18px;
 
 }
